菜单 用户 角色

--- a/public/index.html
+++ b/public/index.html
@@ -8,9 +8,11 @@
     <title><%= htmlWebpackPlugin.options.title %></title>
     <style>
         body {
+            background-color: #EBEEF5;
             height: 100%;
             width: 100%;
             margin: 0;
+            padding: 0;
         }
     </style>
 </head>
